{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 128,
  "lineage": "966f2af6-9190-17ad-79ee-d6dea1b2b129",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:058264084230:instance/i-0821202ae4ae07ba3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0821202ae4ae07ba3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0914aacde35a253a5"
              }
            ],
            "primary_network_interface_id": "eni-0914aacde35a253a5",
            "private_dns": "ip-10-1-3-233.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.233",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07e23729066552fb6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a01413514fd6fb67",
            "tags": {
              "Name": "dev-private-ec2-1"
            },
            "tags_all": {
              "Name": "dev-private-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7158fd28210c22"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "i-0821202ae4ae07ba3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:058264084230:instance/i-07d80b37a02555fdb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d80b37a02555fdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0028a9d718c61cc16"
              }
            ],
            "primary_network_interface_id": "eni-0028a9d718c61cc16",
            "private_dns": "ip-10-1-3-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.83",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088b1e80ff8dc1297",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a01413514fd6fb67",
            "tags": {
              "Name": "dev-private-ec2-2"
            },
            "tags_all": {
              "Name": "dev-private-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7158fd28210c22"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "i-07d80b37a02555fdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:058264084230:instance/i-0c5a8abd2216d8a90",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5a8abd2216d8a90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0380fc58024fbe9aa"
              }
            ],
            "primary_network_interface_id": "eni-0380fc58024fbe9aa",
            "private_dns": "ip-10-1-3-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.110",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01cca76a187282a7c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a01413514fd6fb67",
            "tags": {
              "Name": "dev-private-ec2-3"
            },
            "tags_all": {
              "Name": "dev-private-ec2-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7158fd28210c22"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "i-0c5a8abd2216d8a90",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:058264084230:instance/i-04992a6108db11648",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04992a6108db11648",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d0461c7df9ca5bd6"
              }
            ],
            "primary_network_interface_id": "eni-0d0461c7df9ca5bd6",
            "private_dns": "ip-10-1-3-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.4",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0965e48bddacbb28e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a01413514fd6fb67",
            "tags": {
              "Name": "dev-private-ec2-4"
            },
            "tags_all": {
              "Name": "dev-private-ec2-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d7158fd28210c22"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "i-04992a6108db11648",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.private_sg",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:058264084230:instance/i-03d03f205873bc2a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03d03f205873bc2a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05431fe3af269b7ed"
              }
            ],
            "primary_network_interface_id": "eni-05431fe3af269b7ed",
            "private_dns": "ip-10-1-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.80",
            "public_ip": "54.92.138.7",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b5c2de4c8cf9354",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a537d5f8d136b463",
            "tags": {
              "Name": "dev-public-ec2-1"
            },
            "tags_all": {
              "Name": "dev-public-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab18d79582df16e5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "i-03d03f205873bc2a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.mykey",
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:security-group/sg-04d7158fd28210c22",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d7158fd28210c22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ab18d79582df16e5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-private-ec2-sg",
            "name_prefix": "",
            "owner_id": "058264084230",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "sg-04d7158fd28210c22",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.public_sg",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:security-group/sg-0ab18d79582df16e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab18d79582df16e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-public-ec2-sg",
            "name_prefix": "",
            "owner_id": "058264084230",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "sg-0ab18d79582df16e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_eip",
      "name": "net_eip",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c47a35b8eaa5328c",
            "arn": "arn:aws:ec2:us-east-1:058264084230:elastic-ip/eipalloc-0c47a35b8eaa5328c",
            "domain": "vpc",
            "id": "eipalloc-0c47a35b8eaa5328c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-54-151.compute-1.amazonaws.com",
            "public_ip": "98.95.54.151",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0343f3b133eef6474",
            "arn": "arn:aws:ec2:us-east-1:058264084230:elastic-ip/eipalloc-0343f3b133eef6474",
            "domain": "vpc",
            "id": "eipalloc-0343f3b133eef6474",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-16-152-238.compute-1.amazonaws.com",
            "public_ip": "50.16.152.238",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            },
            "tags_all": {
              "Created_by": "Avinash",
              "Name": "dev-eip-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:internet-gateway/igw-090ca752f140b61b9",
            "id": "igw-090ca752f140b61b9",
            "owner_id": "058264084230",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c47a35b8eaa5328c",
            "association_id": "eipassoc-01cec1abd63e70255",
            "connectivity_type": "public",
            "id": "nat-01c2c4f0280689aa1",
            "network_interface_id": "eni-028b0518a979af29d",
            "private_ip": "10.1.1.201",
            "public_ip": "98.95.54.151",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a537d5f8d136b463",
            "tags": {
              "Name": "dev-nat-gw-1"
            },
            "tags_all": {
              "Name": "dev-nat-gw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0343f3b133eef6474",
            "association_id": "eipassoc-04a7c5cb7252e9f0a",
            "connectivity_type": "public",
            "id": "nat-0cc913f191768613b",
            "network_interface_id": "eni-0a6d7923eff0e9b49",
            "private_ip": "10.1.2.144",
            "public_ip": "50.16.152.238",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ada0063bb2f3911",
            "tags": {
              "Name": "dev-nat-gw-2"
            },
            "tags_all": {
              "Name": "dev-nat-gw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:route-table/rtb-01a363a711f84d5cc",
            "id": "rtb-01a363a711f84d5cc",
            "owner_id": "058264084230",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01c2c4f0280689aa1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "rtb-01a363a711f84d5cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:route-table/rtb-0d411f6c30cd5e52d",
            "id": "rtb-0d411f6c30cd5e52d",
            "owner_id": "058264084230",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cc913f191768613b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "rtb-0d411f6c30cd5e52d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:route-table/rtb-008df81777e723240",
            "id": "rtb-008df81777e723240",
            "owner_id": "058264084230",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ca752f140b61b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-1"
            },
            "tags_all": {
              "Name": "dev-public-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "rtb-008df81777e723240",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:route-table/rtb-0e23014c5458927f7",
            "id": "rtb-0e23014c5458927f7",
            "owner_id": "058264084230",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090ca752f140b61b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt-2"
            },
            "tags_all": {
              "Name": "dev-public-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "rtb-0e23014c5458927f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assocaition_pub",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6bc6415d2bf3c01",
            "region": "us-east-1",
            "route_table_id": "rtb-008df81777e723240",
            "subnet_id": "subnet-0a537d5f8d136b463"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b4f6cc6a970ee12",
            "region": "us-east-1",
            "route_table_id": "rtb-0e23014c5458927f7",
            "subnet_id": "subnet-02ada0063bb2f3911"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_route_table.public_rt",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associateion_pri",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b17bd5f78ba9d33",
            "region": "us-east-1",
            "route_table_id": "rtb-01a363a711f84d5cc",
            "subnet_id": "subnet-0a01413514fd6fb67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87ab05da85a4a62",
            "region": "us-east-1",
            "route_table_id": "rtb-0d411f6c30cd5e52d",
            "subnet_id": "subnet-018ab7039d43a6703"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_eip.net_eip",
            "module.infra.aws_internet_gateway.igw",
            "module.infra.aws_nat_gateway.ngw",
            "module.infra.aws_route_table.private_rt",
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_subnet.public_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:subnet/subnet-0a01413514fd6fb67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a01413514fd6fb67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264084230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "subnet-0a01413514fd6fb67",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:subnet/subnet-018ab7039d43a6703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ab7039d43a6703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264084230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "subnet-018ab7039d43a6703",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:subnet/subnet-0a537d5f8d136b463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a537d5f8d136b463",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264084230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "subnet-0a537d5f8d136b463",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:subnet/subnet-02ada0063bb2f3911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ada0063bb2f3911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264084230",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0033929b44ab0a882"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "subnet-02ada0063bb2f3911",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone"
          ]
        }
      ]
    },
    {
      "module": "module.infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.infra.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264084230:vpc/vpc-0033929b44ab0a882",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05628418ddd535eac",
            "default_route_table_id": "rtb-0020f885132a73ae2",
            "default_security_group_id": "sg-0321dd218c4cb9c5e",
            "dhcp_options_id": "dopt-0b87e82ee94969aa5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0033929b44ab0a882",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0020f885132a73ae2",
            "owner_id": "058264084230",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264084230",
            "id": "vpc-0033929b44ab0a882",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "module.tgw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:058264084230:transit-gateway/tgw-0c899cceb7d423398",
            "association_default_route_table_id": "tgw-rtb-04a908839eb7fb25e",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "enableling conectivty between two vpc",
            "dns_support": "enable",
            "id": "tgw-0c899cceb7d423398",
            "multicast_support": "disable",
            "owner_id": "058264084230",
            "propagation_default_route_table_id": "tgw-rtb-04a908839eb7fb25e",
            "region": "us-east-1",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "dev-tgw"
            },
            "tags_all": {
              "Name": "dev-tgw"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-local-attach",
      "provider": "module.tgw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:us-east-1:058264084230:transit-gateway-attachment/tgw-attach-0bda841d19cfcb6d4",
            "dns_support": "enable",
            "id": "tgw-attach-0bda841d19cfcb6d4",
            "ipv6_support": "disable",
            "region": "us-east-1",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-018ab7039d43a6703",
              "subnet-0a01413514fd6fb67"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0c899cceb7d423398",
            "vpc_id": "vpc-0033929b44ab0a882",
            "vpc_owner_id": "058264084230"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.infra.aws_subnet.private_subnet",
            "module.infra.aws_vpc.main_vpc",
            "module.infra.data.aws_availability_zones.available_zone",
            "module.tgw.aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    }
  ]
}